name:                huttons-razor
version:             0.1.0.0
synopsis:            Quick implemention of Hutton's Razor
license:             BSD2
license-file:        LICENSE
author:              Steven Shaw
maintainer:          steven@steshaw.org
homepage:            https://github.com/steshaw/huttons-razor
copyright:           © 2015 Steven Shaw
category:            Example
build-type:          Simple
cabal-version:       >=1.10

executable huttons-razor
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , parsec
                     , parsec-numbers
  hs-source-dirs:      src
  default-language:    Haskell2010
